<resources>
    <string name="app_name">My Application</string>

    <string name="ListaFrases">Lista de frases</string>
    <string name="title_activity_talk">Talk</string>
    <string name="title_activity_list_phrases">Lista de frases</string>
    <!--<string name="title_activity_activity_list_view_phrases">activity_listView_phrases</string>-->

    <!--<string name="title_activity_main2">Main2Activity</string>-->
    <!--<string name="button_Download">Descargar conversación</string>-->
    <string name="category_phrases">Frases de categoría:</string>

    <!--START ACTIVITY-->
    <string name="search_results">Resultados de la búsqueda</string>
    <string name="title_activity_start">Principal</string>
    <string name="search_by_place">Buscar por categoría</string>
    <string name="search_place_by_name">Buscar lugar</string>
    <string name="button_chat_now">Hablar ahora</string>
    <string name="network_option_select">Seleccione una opción de conexión</string>
    <string name="activate_wifi">Activar wifi</string>
    <string name="activate_movile_network">Activar red movil</string>

    <!--CHAT ACTIVITY-->
    <string name="insert_phrase_to_save">Por favor ingrese una frase a guardar</string>
    <string name="new_phrase">Se agrego con exito una nueva frase</string>
    <string name="no_voice_recognition">No se encuentra disponible la herramienta voice recognizer</string>
    <string name="phrase_repeated">La frase ya existe</string>
    <string name="button_speak">Hablar</string>
    <string name="microphono">Escuchar</string>
    <string name="choose_phrase">Elegir frase</string>
    <string name="other_talk">Oyente</string>
    <string name="myself">Yo</string>
    <string name="input_select_phrase">Ingrese/seleccione una frase</string>
    <string name="speak_button">Hablar</string>
    <string name="title_activity_chat">Chat</string>
    <string name="add_phrase">Guardar frase</string>

    <!--LIST PHRASES ACTIVITY-->
    <string name="phrase_updated">Frase actualizada</string>

    <!--MENU CONTEXTUAL-->
    <string name="menu_edit">Editar</string>
    <string name="menu_delete">Eliminar</string>
    <string name="delete_title">Eliminar</string>
    <string name="delete_message">¿Seguro que quiere eliminar la frase?</string>
    <string name="delete_message_category">¿Seguro que quiere eliminar la categoría?</string>
    <string name="download_message_category">¿Quiere descargar esta categoría?</string>
    <string name="phrase_deleted">Frase eliminada</string>
    <string name="input_phrase_edit">Ingrese la frase:</string>

    <!--ACTION VAR-->
    <string name="action_settings">settings</string>
    <string name="action_download">Categorías</string>
    <string name="activate_GPS">Activar GPS</string>
    <string name="deactivate_GPS">Desactivar GPS</string>
    <string name="create_category">Crear categoría</string>
    <string name="my_categories">Mis categorías</string>
    <string name="title_activity_list_categories">Mis categorías</string>
    <string name="start_activity">Principal</string>


    <!--CREATE CATEGORY ACTIVITY-->
    <string name="title_activity_create_category">Crear una categoria</string>
    <string name="category_name">Nombre de la cateogoría</string>
    <string name="new_phrase_input">Nueva frase</string>
    <string name="add_new_phrase">Agregar frase</string>
    <string name="button_add_category">Agregar categoría</string>
    <string name="category_added">Se agrego exitosamente la categoría</string>
    <string name="new_phrases_category">Frases de la nueva categoría</string>
    <string name="new_phrase_name_exist">La categoría que intenta dar de alta ya existe</string>

    <!--LIST CATEGORIES--><!--DOWNLOAD CATEGORY ACTIVITY-->
    <string name="category_deleted">Categoría eliminada</string>
    <string name="category_downloaded">Categoría descargada</string>
    <string name="text_my_categories">Mis categorías</string>
    <string name="chat_title">Categoría:</string>
    <string name="download_title">Para descargar</string>
    <string name="title_activity_download_category">Categorías</string>
    <string name="text_view_packages">Paquetes disponibles</string>
    <string name="phrase_empty">Por favor ingrese una frase</string>
</resources>
