<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ListView
            android:id="@+id/messagesContainer"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:listSelector="@android:color/transparent"
            android:transcriptMode="alwaysScroll"
            android:divider="@null"
            android:layout_above="@+id/speakPhrase" />

        <EditText
            android:id="@+id/speakPhrase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:layout_above="@+id/buttonChoosePhrase"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/buttonSpeak"
            android:inputType="text" />


        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/buttonSpeak"
            android:src="@drawable/miflechagrande4"
            android:contentDescription="@string/speak_button"
            android:layout_alignBottom="@+id/speakPhrase"
            android:layout_alignLeft="@+id/imageButtonMicrophone"
            android:layout_alignStart="@+id/imageButtonMicrophone"
            android:layout_below="@+id/messagesContainer"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:padding="0dp"

            android:background="@android:color/transparent"/>

        <Button
            android:id="@+id/buttonSavePhase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_phrase"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/buttonChoosePhrase"
            android:layout_toEndOf="@+id/buttonChoosePhrase" />


        <ImageButton
            android:id="@+id/imageButtonMicrophone"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="#ffffff"
            android:adjustViewBounds="false"
            android:src="@drawable/microphone1"
            android:contentDescription="@string/microphono"
            android:layout_alignTop="@+id/buttonSavePhase"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:scaleType="fitCenter"
            android:padding="0dp"
            android:layout_marginTop="3dp"/>

        <Button
            android:id="@+id/buttonChoosePhrase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_phrase"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

    </RelativeLayout>
</LinearLayout>