<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:id="@+id/scrollViewChat"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:layout_above="@+id/speakPhrase">
        <TextView
            android:id="@+id/textOutput"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp"
            android:textSize="20dp"
            android:lineSpacingExtra="7dp"/>
    </ScrollView>

    <ImageButton
        android:id="@+id/imageButtonMicrophone"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="#ffffff"
        android:layout_gravity="bottom"
        android:adjustViewBounds="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/microphone1"
        android:contentDescription="@string/microphono"
        android:layout_alignTop="@+id/buttonSpeak" />

    <Button
        android:id="@+id/buttonChoosePhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_phrase"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/speakPhrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonChoosePhrase"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/imageButtonMicrophone"
        android:layout_toStartOf="@+id/imageButtonMicrophone"
        android:nextFocusUp="@id/speakPhrase"
        android:nextFocusLeft="@id/speakPhrase"/>

    <Button
        android:id="@+id/buttonSpeak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_speak"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:id="@+id/imageButtonPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/speakPhrase"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/plus1"
        android:layout_toEndOf="@+id/speakPhrase"
        android:layout_toRightOf="@+id/speakPhrase"
        android:layout_below="@+id/scrollViewChat"
        android:adjustViewBounds="false"
        android:nestedScrollingEnabled="false" />

</RelativeLayout>
